--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div>
+    <div id="one">
         git练习
     </div>
 </body>
+<script src="./js/index.js"></script>
 </html>
